-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs23
-
Component/s: hotspot
-
b22
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2229457 | 8 | Christian Thalinger | P3 | Resolved | Fixed | b55 |
| JDK-8017976 | 7u45 | Christian Thalinger | P3 | Closed | Fixed | b01 |
| JDK-8002840 | 7u40 | Christian Thalinger | P3 | Resolved | Fixed | b01 |
In certain situations with inlining this can cause type mismatches.
Nashorn revision:
changeset: 2266:d151cc49ad86
tag: tip
user: lagergren
date: Wed May 16 18:43:17 2012 +0200
summary: removed debug printout
has exactly this problem. Running any test like crypto shows this behavior:
$ java -jar dist/nashorn.jar test/performance/runcrypto.js
...
# Internal Error (/home/cthaling/7192167/src/share/vm/opto/parse3.cpp:125), pid=22819, tid=2807036784
# assert(_gvn.type(obj)->higher_equal(tjp)) failed: cast_up is no longer needed
- backported by
-
JDK-2229457 JSR 292: C2 needs exact return type information for invokedynamic and invokehandle call sites
-
- Resolved
-
-
JDK-8002840 JSR 292: C2 needs exact return type information for invokedynamic and invokehandle call sites
-
- Resolved
-
-
JDK-8002841 JSR 292: C2 needs exact return type information for invokedynamic and invokehandle call sites
-
- Closed
-
-
JDK-8002842 JSR 292: C2 needs exact return type information for invokedynamic and invokehandle call sites
-
- Closed
-
-
JDK-8017976 JSR 292: C2 needs exact return type information for invokedynamic and invokehandle call sites
-
- Closed
-
- relates to
-
JDK-7200949 JSR 292: rubybench/bench/time/bench_base64.rb fails with jruby.jar not on boot class path
-
- Resolved
-